add DNS forwarding support,DNS over ssh tunnel

--- a/PrettyTunnel/zh-Hans.lproj/Localizable.strings
+++ b/PrettyTunnel/zh-Hans.lproj/Localizable.strings
@@ -23,6 +23,7 @@
 "Connection Settings" = "连接设置";
 "Save" = "保存";
 "PAC Proxy" = "PAC代理";
+"DNS Server" = "DNS服务器";
 "Connection Settings" = "连接设置";
 "Description" = "描述";
 "Remote Server" = "远程服务器";
