添加引导界面

--- a/PrettyTunnel/zh-Hans.lproj/Localizable.strings
+++ b/PrettyTunnel/zh-Hans.lproj/Localizable.strings
@@ -16,6 +16,7 @@
 "Connect Success" = "连接成功";
 "Connected" = "已连接";
 "Copied" = "复制成功";
+"Feature Guide" = "功能引导";
 
 "CONNECTION CONFIG" = "连接配置";
 "Not Configured" = "尚未配置";
