整理关于页面

--- a/PrettyTunnel/Base.lproj/InfoPlist.strings
+++ b/PrettyTunnel/Base.lproj/InfoPlist.strings
@@ -6,5 +6,5 @@
 
 */
 
-"CFBundleDisplayName" = "Interstellar";
-"CFBundleName" = "Interstellar";
+"CFBundleDisplayName" = "Pretty Tunnel";
+"CFBundleName" = "Pretty Tunnel";
